# django-webpack-pages

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
webpack_pages/: jinja2ext.py  pageassetfinder.py  templatetags.py
