[tool.poetry]
name = "django-webpack-pages"
version = "0.0.1"
description = "Use webpack with your multi-page, multilingual django webapp"
authors = ["MrP01 <peter@waldert.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrP01/django-webpack-pages"
keywords = ["django", "webpack", "assets"]
packages = [{ include = "webpack_pages" }]

[tool.poetry.dependencies]
python = "^3.8"
django-webpack-loader = "^1.5.0"
Django = "^3.0"
Jinja2 = "^3.1.2"

[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
